2007-08-31  Michael Meissner  <michael.meissner@amd.com>
	    Dwarakanath Rajagopal  <dwarak.rajagopal@amd.com>

	* NEWS: Add note about SSE5 being added on i386.

2007-09-13  Alan Modra  <amodra@bigpond.net.au>
	    Zhou Drangon <drangon.mail@gmail.com>

	* nm.c (value_format_64bit, set_print_radix, print_value): Handle
	BFD_HOST_64BIT_LONG_LONG.
	* readelf.c (print_dec_vma): Don't define if BFD_HOST_64BIT_LONG_LONG.
	(print_vma): Handle BFD_HOST_64BIT_LONG_LONG.
	(dump_relocations): Likewise.  Expand _bfd_int64_low in a
	number of places.

2007-09-11  Kai Tietz  <kai.tietz@onevision.com>

	* rcparse.y: (string_data): Removed ill token removal.

2007-09-10  Alan Modra  <amodra@bigpond.net.au>

	PR 5011
	* readelf.c (process_version_sections): Don't read past end of
	various section buffers.

2007-08-31  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (INCLUDES): Remove -D_GNU_SOURCE.
	* Makefile.in: Regenerated.

	* sysdep.h: Include "config.h" first.

2007-08-31  Nick Clifton  <nickc@redhat.com>

	* po/sk.po: New Slovakian translation.
	* configure.in (LINGUAS): Add sk.
	* configure: Regenerate.

2007-08-30  Nick Clifton  <nickc@redhat.com>

	* readelf.c (dump_type): New type used to classify the kinds of
	dump requested by the user.
	(dump_sects, cmdline_dump_sects): Use the new type.
	(options): Add --string-dump option.
	(request_dump): Rename to request_dump_bynumber.  Use dump_type.
	(request_dump_byname): Use dump_type.
	(parse_args): Parse --string-dump option.
	(process_section_headers): Fix calls to request_dump.
	(initialise_dumps_byname): Likewise.
	(dump_section): Rename to dump_section_as_bytes.
	(dump_section_as_strings): New function.  Display the contents of
	a section as printable strings.
	(process_section_contents): String dump the section if requested.
	(process_object): Use dump_type.
	(main): Likewise.
	* Makefile.am: Add dependency for readelf.c on safe-ctype.h.
	* Makefile.in: Regenerate.
	* NEWS: Mention the new feature.